# Pazi-s-League-of-Legends-Emulator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/macros/: CheckBuildDir.cmake  FindGit.cmake
dep/: CMakeLists.txt
dep/enet/: CMakeLists.txt  callbacks.cpp  enet.h  host.cpp  packet.cpp  peer.cpp  protocol.cpp  protocol.h  unix.cpp  unix.h  win32.cpp
dep/intlib/: CMakeLists.txt
dep/raf/: CMakeLists.txt  FileReader.cpp  FileReader.h  Inibin.h  MemoryReader.h  RAFFile.cpp  RAFFile.h  RAFManager.cpp  RAFManager.h  miniz.h  tinydir.h
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/AI/: AIMesh.cpp  AIMesh.h
src/game/Collision/: CollisionHandler.h
src/game/Entities/Champion/: Champion.cpp
src/game/Entities/Item/: Inventory.cpp  Item.h  ItemManager.cpp  ItemManager.h
src/game/Entities/Object/: Object.cpp  Object.h
src/game/Entities/Unit/: Unit.cpp  Unit.h
src/game/Gamenode/: Game.cpp  Game.h
src/game/Handlers/: Handlers.cpp
src/game/Logger/: Logger.cpp  Logger.h
src/game/Map/: Map.cpp  Map.h
src/game/Misc/: Stats.h  common.h
src/game/Movement/: Pathfinder.cpp  Pathfinder.h  Vector2.cpp
src/game/Notifiers/: Notifiers.cpp
src/game/Packets/: PacketHandler.cpp  Packets.cpp  Packets.h
src/game/Spells/: Buff.cpp  Buff.h  Spell.cpp  Spell.h
src/gamenode/: CMakeLists.txt  gamenode.conf.dist  gamenode.rc  main.cpp
src/genrev/: CMakeLists.txt
src/logonserver/: CMakeLists.txt  Main.cpp  logonserver.conf.dist  logonserver.rc
src/scripts/: CMakeLists.txt
src/scripts/Champions/: Ahri.cpp
src/shared/: CMakeLists.txt  Common.h  CompilerDefs.h  Define.h  Stdafx.h  SystemConfig.h
src/shared/Configuration/: Config.cpp  Config.h
src/shared/Debugging/: Errors.cpp  Errors.h
src/shared/Logging/: Appender.cpp  Appender.h  AppenderConsole.cpp  AppenderConsole.h  AppenderDB.cpp  AppenderDB.h  AppenderFile.cpp  AppenderFile.h  Log.cpp  Log.h  LogOperation.cpp  LogOperation.h  Logger.cpp  Logger.h
src/shared/Threading/: Callback.h  LockedQueue.h  ProcessPriority.h  ProducerConsumerQueue.h
src/shared/Utilities/: Timer.h  Util.cpp  Util.h
